[project]
name = "dustloop-data"
version = "0.1.0"
description = "Scraper for Frame Data of games featured on https://www.dustloop.com/w/Main_Page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.9.4",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project.scripts]
dustloop-data-cli = "src.cli:app"
